# Price-Web-Scraper

./: README.md  app.py  pyproject.toml
Scrapers/: Amazon.py  BackMarket.py  Ebay.py  Gumtree.py
tests/Scrapers/: test_Amazon.py
