[tool.poetry]
name = "price-web-scraper"
version = "0.1.0"
description = ""
authors = ["SimonH <professional.simonhossain@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "^4.12.3"
playwright = "^1.43.0"
requests = "^2.31.0"
flask = "^3.0.3"
pytest = "^8.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
